--- a/vignettes_highres/Introduction_R.Rmd
+++ b/vignettes_highres/Introduction_R.Rmd
@@ -19,7 +19,7 @@ opts_knit$set(width=75)
 
 R is a language and environment for statistical computing and
 graphics. To download R, please visit the [Comprehensive R Archive
-Network](http://cran.r-project.org). You do not need to be an expert
+Network](https://cran.r-project.org). You do not need to be an expert
 on it to be able to build your linkage map using _OneMap_.
 
 Although we prefer and recommend the Linux version, in this tutorial
@@ -28,7 +28,7 @@ or Mac OS should have no difficulty following this tutorial.
 
 We would like to recommend that new users, instead of using plain R,
 use it through the fantastic software
-[RStudio](http://www.rstudio.com/). With this package, there is no
+[RStudio](https://www.rstudio.com/). With this package, there is no
 noticeable difference between operating systems.
 
 As advertised on the website, _RStudio is an integrated development
@@ -233,9 +233,15 @@ The first argument is the name of the file; the second one indicates
 if the file contains a header, that is, if the first line of the file
 contains the names of the variables (which is true for our example):
 
-```{r }
+```{r, eval=FALSE}
 dat <- read.table(file = "test.txt", header = TRUE)
 dat
+``` 
+
+```{r, echo=FALSE}
+dat <- data.frame(x = c(2.13,4.48,10.95,10.03,12.72,24.63,22.57,29.78,19.54,7.86,11.75,23.71),
+                  y= c(4.5,1.98,9.29,16.25,27.38,22.6,36.87,31.73,10.42,14.68,8.68,37.39))
+
 ``` 
 
 The second line, with _dat_, is necessary to ask R to print the
